<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <CheckedTextView
        android:id="@+id/AT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AT"
        android:textSize="20dp" />
    <CheckedTextView
        android:id="@+id/AT2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AT2"
        android:textSize="20dp" />

    <CheckedTextView
        android:id="@+id/onAccuracyChanged"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onAccuracyChanged"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/File_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="001"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_address"/>

            <EditText
                android:id="@+id/server_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_server_address"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_port"/>

            <EditText
                android:id="@+id/server_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_server_port"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/Button_Connect"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_Connect" android:textSize="20dp"/>

        <Button
            android:id="@+id/Button_Write"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_Write" android:textSize="20dp"/>

        <Button
            android:id="@+id/Button_Stop"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_Stop" android:textSize="20dp"/>

        <Button
            android:id="@+id/Button_Show"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/Button_Show" android:textSize="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/Show_File_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Show_File_Content"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>